--- a/css/index.css
+++ b/css/index.css
@@ -1,180 +1,1 @@
-body {
-  padding-top: 80px;
-}
-.navbar-fixed-top {
-    border: 0;
-}
-.header {
-    background-color: #2a333d;
-}
-.header .separator {
-    border-left: 1px solid #ccc;
-    display: inline-block;
-    height: 10px;
-    margin: 0 20px;
-    width: 1px;
-}
-.header .navbar-toggle {
-    margin-top : 23px;
-    margin-bottom : 23px;
-}
-.header .navbar-brand {
-    height : 80px;
-}
-@media (min-width: 768px) {
-    .navbar-brand img:first-child {
-        display: none;
-    }
-}
-@media (max-width: 767px) {
-    .navbar-brand img:first-child {
-        display: block;
-    }
-    .navbar-brand img:last-child {
-        display: none;
-    }
-}
-#navbar .nav {
-    margin-right : 0;
-    padding-top : 28px;
-    padding-bottom : 28px;
-}
-#navbar .navbar-form {
-    margin-top : 23px;
-    margin-bottom : 23px;
-}
-#navbar .logged-user {
-    display: inline-block;
-    text-align: left;
-    vertical-align: middle;
-}
-#navbar .logged-user .btn {
-    border: medium none;
-    color: #fff;
-    font-size: 0.9em;
-    font-weight: 700;
-    padding: 0;
-    text-decoration: none;
-}
-#navbar .logged-user .btn .name {
-    font-weight: 400;
-}
-#navbar .dropdown-menu > li > a > i {
-    margin-right : 15px;
-}
-#navbar .logged-user .open .btn {
-    background-color : transparent;
-}
-.sidebar-left {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar-left {
-    position: fixed;
-    top: 80px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    background-color: #383e4e;
-    border-right: 1px solid #eee;
-  }
-}
-.sidebar-left h4 {
-    font-size : 16px;
-}
-.sidebar-left .nav > li > a > span {
-    vertical-align : middle;
-    line-height : 20px;
-}
-.sidebar-left h4 span:last-child,
-.sidebar-left .nav > li > a > span:nth-child(2) {
-    margin-left : 15px;
-}
-
-/* Sidebar navigation */
-.nav-sidebar {
-  margin-right: -21px;
-  margin-bottom: 20px;
-  margin-left: -20px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.nav-sidebar > li > a:focus,
-.nav-sidebar > li > a:hover {
-    color : #FFF;
-    background-color : #1b2229;
-}
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-  color: #fff;
-  background-color: #428bca;
-}
-.sub-sidebar > li > a {
-    padding-top : 5px;
-    padding-bottom : 5px;
-    padding-left : 69px;
-}
-
-/*
- * Main content
- */
-
-.main {
-  padding: 20px;
-}
-.main h4 span {
-    padding-right : 20px;
-    vertical-align : top;
-}
-@media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
-}
-.main > h5 {
-    padding: 15px;
-}
-.main h5 > strong {
-    margin-right : 5px;
-}
-.main .page-header {
-  margin-top: 0;
-}
-
-.domain-info {
-    margin-bottom : 20px;
-    font-size : 16px;
-}
-.domain-info > div {
-    margin-bottom : 10px;
-}
-.operation .btn {
-    width : 120px;
-}
-@media (max-width: 768px) {
-    .operation .btn {
-        width : 100px;
-    }
-    .operation > div {
-
-    }
-}
-.domain-status {
-    margin-top : 20px;
-}
-.registration-date {
-    margin-top : 20px;
-    margin-bottom : 40px;
-}
-.registration-date .separator {
-    margin-left : 5px;
-    margin-right : 5px;
-}
+@charset "utf-8";body {    background-color: #FFF;}/* 头部层样式开始 */.header {    height: 80px;    background-color: #2A333D;}.header .logo-left {    float: left;    height: 100%;}.header .logo-left img,.header .logo-left .separator,.header .logo-left .txt {    display: block;    float: left;}.header .logo-left img {    padding: 15px 0 15px 20px;}.header .logo-left .separator {    margin: 15px 24px;    height: 50px;    width: 1px;    background-color: #5C5C5C;g34}.header .logo-left .txt {    height: 80px;    line-height: 80px;    color: #CCC;}.header .logo-left b {    padding-right: 5px;}.header .profile-right {    float: right;    line-height: 80px;    padding-right: 30px;}.header .profile-right img {    vertical-align: text-top;}.header .profile-right .txt {    padding-left: 5px;    color: #9DBAC1;}/* 头部层样式结束 *//* 内容层样式开始 */.main {    width: 100%;    height: 500px;}.main .slider-left {    position: absolute;    top: 80px;    left: 0;    width: 180px;    height: calc(100% - 80px);    color: #C3C6C8;    background-color: #383E4E;}.slider-left h2,.slider-left dt,.slider-left dd {    height: 40px;    line-height: 40px;    padding-left: 40px;}.slider-left h2 {    background: transparent url(../images/icon_07.png) no-repeat scroll 15px center;}.slider-left dl dt {    background: transparent no-repeat scroll 15px center;}.slider-left dl dd {    padding-left: 65px;}.slider-left dl dd:hover {    background-color: #2D313D;    cursor: pointer;}.slider-left dl dd.current {    background: #1b2229 url(../images/icon_01.png) no-repeat scroll right center;}.slider-left .domain dt {    background-image: url(../images/icon_14.png);}.slider-left .vip dt {    background-image: url(../images/icon_12.png);}.slider-left .business dt {    background-image: url(../images/icon_18.png);}.slider-left .setting dt {    background-image: url(../images/icon_27.png);}/* 内容层右边详细层开始 */.content-right {    margin-left: 180px;    padding: 20px 25px;}.content-right h2 {    height: 30px;    padding-left: 20px;    font: bold 20px/30px 'Microsoft Yahei';    background: transparent url(../images/icon_11.png) no-repeat scroll left center;    color: #676b78;}.content-right .details {    margin-top: 20px;}.details .form-group {    margin-bottom: 15px;}.details label {    display: inline-block;    width: 100px;    margin-right: 15px;    font-weight: 700;    text-align: right;;}.form-control {    display: block;    width: 100%;    height: 34px;    padding: 6px 12px;    font-size: 14px;    line-height: 1.42857143;    color: #555;    background-color: #fff;    background-image: none;    border: 1px solid #ccc;    border-radius: 4px;    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;}.form-control:focus {    border-color: #66afe9;    outline: 0;    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);}.form-control::-moz-placeholder {    color: #999;    opacity: 1;}.form-control:-ms-input-placeholder {    color: #999;}.form-control::-webkit-input-placeholder {    color: #999;}.form-control[disabled],.form-control[readonly],fieldset[disabled] .form-control {    background-color: #eee;    opacity: 1;}.form-control[disabled],fieldset[disabled] .form-control {    cursor: not-allowed;}textarea.form-control {    height: auto;}.form-group .form-text {    display: inline-block;    height: 20px;    width: 200px;}.form-group .status {    vertical-align: top;}.form-group .form-container {    display: inline-block;    min-width: 500px;    max-width: 800px;}.form-container .checkbox {    width: 150px;    text-align: left;    font: normal 12px/24px 'Microsoft Yahei';    margin-bottom: 15px;}.form-container .checkbox input[type='checkbox'] {    vertical-align: middle;    margin-right: 10px;}.details hr {    margin: 30px 0;    border-color: #dde1e1;    box-shadow: 1px 1px 5px #888;    opacity: .4;    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);}.details .reg-date {    margin-bottom: 30px;}.details .reg-date input[type='text'] {    width: 90px;}.details .reg-date span {    margin-left: 10px;    margin-right: 10px;}.details button {    width: 87px;    height: 28px;    border: none;    color: #fff;    font-family: 'Microsoft Yahei';}.details button.submit {    margin-left: 40px;    margin-right: 20px;    background: transparent url(../images/icon_20.png) no-repeat scroll center center;}.details button.cancel {    background: transparent url(../images/icon_22.png) no-repeat scroll center center;}.details h3 span {    margin-right: 5px;    color: #f00;}td, th, caption {    font-size: 12px;}.table,.table tr th,.table tr td {    padding: 10px;    border: 1px solid #D0dde9;    text-align: center;}.table{    margin-top: 10px;    border-collapse: collapse;    border-spacing: 0;    width: 100%;    font-size: 12px;}.table tr th{    background-color: #e7f4fc;}.table tr td:last-child {    color: #0f67c5;}.details .btn-group {    display: inline-block;    position: relative;    height: 20px;    width: 100px;}.details .btn-group .caret {    position: absolute;    right: 10px;    top: 14px;    width: 8px;    height: 5px;    background: transparent url(../images/icon_02.png) no-repeat center center;}.details button.confirm {    margin-left: 0;    background-image: url(../images/icon_04.png);}.domain-info {    margin-top: 10px;    margin-left: 20px;}.domain-info p {    margin-bottom: 10px;}.domain-info p span:first-child {    display: inline-block;    width: 80px;    text-align: right;}.host-info {    margin-top: 10px;    margin-left: 20px;}.host-info li {    list-style: decimal inside;    height: 25px;    margin-bottom: 5px;}.operation {    margin-top: 10px;    margin-left: 20px;    width: 800px;}.operation button {    width: 120px;    height: 32px;    border: none;    color: #fff;    border-radius: 4px;    margin-right: 20px;    margin-bottom: 10px;}.operation button.black {    background-color: #343e4b;}.operation button.gray {    background-color: #7e91aa;}.operation button.watchet {    background-color: #4387bf;}.operation button.blue {    background-color: #3b9ff3;}
