--- a/css/reset.css
+++ b/css/reset.css
@@ -14,7 +14,7 @@ a { color:#555; text-decoration:none; }
 a:hover { text-decoration:underline; }
 img { border:none; }
 ol,ul,li { list-style:none; }
-input, textarea, select, button { font:14px Verdana,Helvetica,Arial,sans-serif; }
+input, textarea, select, button { font:14px "Microsoft Yahei", Verdana,Helvetica,Arial,sans-serif; }
 table { border-collapse:collapse; }
 html {overflow-y: scroll;}
 /* ------------------- css common ------------------ */
