--- a/css/reset.css
+++ b/css/reset.css
@@ -6,7 +6,7 @@
  */
 /* ------------------- css reset ------------------ */
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td { margin:0; padding:0; }
-body { background:#fff; color:#555; font-size:14px; font-family: "Microsoft Yahei", Verdana, Arial, Helvetica, sans-serif; }
+body { background:#fff; color:#526273; font-size:13px; font-family: "微软雅黑","Microsoft Yahei","Lucida Grande",Tahoma,Arial,sans-serif; }
 td,th,caption { font-size:14px; }
 h1, h2, h3, h4, h5, h6 { font-weight:normal; font-size:100%; }
 address, caption, cite, code, dfn, em, strong, th, var { font-style:normal; font-weight:normal;}
