--- a/js/templates/system/left.hbs
+++ b/js/templates/system/left.hbs
@@ -3,7 +3,7 @@
     <dl class="{{menuMap this.0.parentId 'class'}}">
         <dt>{{menuMap this.0.parentId 'name'}}</dt>
         {{#each this}}
-            <dd><a target="rightBodyIframe" href="#home{{resourceUrl}}">{{resourceName}}</a></dd>
+            <dd><a href="#home{{resourceUrl}}">{{resourceName}}</a></dd>
         {{/each}}
     </dl>
 {{/each}}
