--- a/css/reset.css
+++ b/css/reset.css
@@ -16,7 +16,7 @@ img { border:none; }
 ol,ul,li { list-style:none; }
 input, textarea, select, button { font:14px "Microsoft Yahei", Verdana,Helvetica,Arial,sans-serif; }
 table { border-collapse:collapse; }
-html {overflow-y: scroll;}
+html {overflow-y: hidden;}
 /* ------------------- css common ------------------ */
 .clearfix:after {content: "."; display: block; height:0; clear:both; visibility: hidden;}
 .clearfix { *zoom:1; }
