--- a/js/templates/domain-query/item.hbs
+++ b/js/templates/domain-query/item.hbs
@@ -1,13 +1,10 @@
-<tr>
-    <td>1</td>
-    <td>test1.ren</td>
-    <td>lcg</td>
-    <td>2015-04-05 04:00:00</td>
-    <td>2016-04-05 04:00:00</td>
-    <td>
-        <div>注册商禁止更新</div>
-        <div>注册商禁止删除</div>
-        <div>注册商禁止转移</div>
-    </td>
-    <td>管理</td>
-</tr>
+<td>1</td>
+<td>{{name}}</td>
+<td>{{userName}}</td>
+<td>2015-04-05 04:00:00</td>
+<td>2016-04-05 04:00:00</td>
+<td>{{status}}</td>
+<td>
+    <a href=""><button class="btn">管理</button></a>
+</td>
+
